# agent-mouth

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: reusable-build.yml  stage-release-publish.yml  stage-test.yml
agent-mouth/: Cargo.toml
agent-mouth/src/: approval.rs  config.rs  lib.rs  main.rs  mcp_server.rs  notify.rs  serve.rs  spine.rs  summarize.rs  update.rs
docs/architecture/: README.md
scripts/: build-release-macos.sh  install.sh  sign-macos.sh  sync-local-release.sh
