[package]
name = "agent-mouth"
version = "0.5.1"
edition = "2021"

[dependencies]
agent-body-core = { git = "https://github.com/autonomic-ai-dev/agent-body" }
anyhow = "1"
axum = "0.7"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
urlencoding = "2"
